# dot-files

./: .editorconfig  .gitignore  .gitmodules  .lua-format  .projections.json  .tool-versions.default  Dockerfile.fedora  Makefile  README  README.md  README.rst  TODO.md  Vagrantfile  brew_install.sh  dotfiles.sh  filetype.vim  gvimrc  install.py  install.zsh  linuxbrew.sh  pyproject.toml  tox.ini  vimrc
UltiSnips/: all.snippets  clojure.snippets  html.snippets  javascript.snippets  less.snippets  markdown.snippets  python.snippets  ruby.snippets
alacritty/: alacritty.yml
asdf/: asdf.plugin.zsh  install.zsh
bat/: bat.plugin.zsh  install.zsh
clojure/: deps.edn  install.zsh
colors/: eclipse.vim  fhashen.vim  fhlight.vim  fhlord.vim
dbcli/: dbcli.plugin.zsh  requirements.txt
direnv/: direnv.plugin.zsh  direnvrc
doc/: tags
dotfiles/: __init__.py  chksum.py  colors.py  common.py  download.py  fs.py  git.py  logging.py  module.py  state.py  zsh.py
ftdetect/: cobol.vim  groovy.vim  mail.vim  moin.vim  text.vim
ftplugin/: groovy.vim  markdown.vim  python.vim  scala.vim  snippet.vim  tex.vim  xml.vim
fzf/: fzf.plugin.zsh
git/: git.plugin.zsh  gitconfig.common  gitignore_global  install.zsh
go/: install.zsh
golang/: golang.plugin.zsh  install-tools.sh
httpie/: httpie.plugin.zsh
iTerm2/: com.googlecode.iterm2.plist
ideavim/: ideavimrc  install.zsh
indent/: java.vim  scala.vim
jabba/: install.zsh
k8s/: k8s.plugin.zsh
kitty/: kitty.plugin.zsh
leiningen/: install.zsh  profiles.clj
lib/: functions.zsh
mac-compat/: pbpaste.plugin.zsh
(+576 files in other folders)
