[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["Ferdinand Hofherr"]
license = "MIT"

[tool.poetry.scripts]
dotfiles = "dotfiles:run"

[tool.poetry.dependencies]
python = ">=3.6, <=3.9"
invoke = "^1.4.1"
colorlog = "^4.1.0"
requests = "^2.23.0"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
tox = "^3.14.5"
tox-asdf = "^0.1.0"
pytest = "^5.3.5"
yapf = "^0.29.0"
flake8 = "^3.7.9"
ipython = "^7.13.0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
