[tool.poetry]
name = "dotfiles"
version = "0.2.0"
description = ""
authors = ["Ferdinand Hofherr"]
license = "MIT"

[tool.poetry.scripts]
dotfiles = "dotfiles.module:run"

[tool.poetry.dependencies]
python = ">=3.7, <3.11"
colorlog = "^4.1.0"
Jinja2 = "^2.11.2"
"github3.py" = "^2.0.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
tox = "^3.14.5"
tox-asdf = "^0.1.0"
pytest = "^6.1.2"
yapf = "^0.30.0"
flake8 = "^3.7.9"
ipython = "^7.13.0"
isort = "^5.6.4"
mypy = "^0.790"
pytest-mock = "^3.3.1"
pytest-cov = "^2.10.1"

[tool.pytest.ini_options]
addopts = ["--strict-markers"]
markers = [
    "module_test: marks the test as testing a whole module (deselect with '-m \"not module_test\"')."
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
